add uuid and phone fields | add ApiExceptionHandlex
